--- a/templates/index.html
+++ b/templates/index.html
@@ -1,74 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1 class="text-center">Server Status Dashboard</h1>
-    <div class="row justify-content-center">
-        <div class="col-md-8">
-            <!-- FCU Status -->
-            <div class="card status-card">
-                <div class="card-header">
-                    FCU Status
-                </div>
-                <div class="card-body">
-                    <p>Connected: <span id="fcu-connected" style="color: red;">Fail</span></p>
-                    <p>Heartbeat: <span id="fcu-heartbeat" style="color: red;">0Hz</span></p>
-                </div>
-            </div>
-            <!-- System Status -->
-            <div class="card status-card mt-3">
-                <div class="card-header">
-                    System Status
-                </div>
-                <div class="card-body">
-                    <p>3D Gyro: <span id="system-3d-gyro" style="color: red;">Fail</span></p>
-                    <p>3D Accelerometer: <span id="system-3d-accelerometer" style="color: red;">Fail</span></p>
-                    <p>3D Magnetometer: <span id="system-3d-magnetometer" style="color: red;">Fail</span></p>
-                    <p>GPS State: <span id="system-gps-state" style="color: red;">Fail</span></p>
-                    <p>GPS Satellites: <span id="system-gps-satellites" style="color: red;">0</span></p>
-                    <p>RC Receiver: <span id="system-rc-receiver" style="color: red;">Fail</span></p>
-                    <p>AHRS: <span id="system-ahrs" style="color: red;">Fail</span></p>
-                    <p>Battery State: <span id="system-battery-state" style="color: red;">Fail</span></p>
-                    <p>Battery Voltage: <span id="system-battery-voltage" style="color: red;">0V</span></p>
-                    <p>Battery Current: <span id="system-battery-current" style="color: red;">0A</span></p>
-                    <p>Pre-Arm Check: <span id="system-pre-arm-check" style="color: red;">Fail</span></p>
-                    <p>CPU Load: <span id="system-cpu-load" style="color: red;">0%</span></p>
-                </div>
-            </div>
-        </div>
+    <div class="text-center">
+        <!-- <img src="/static/logof4f.png" alt="Project Logo" class="logo"> -->
+        <img src="/static/x500.jpg" alt="New Picture" class="img-fluid mt-4" style="width: 70%; max-width: 10000px;">
     </div>
-
-    <script>
-        function startNode() {
-            const eventSource = new EventSource('/start_rosnode');
-            eventSource.onmessage = function(event) {
-                const data = JSON.parse(event.data);
-                // Update the status based on the output received from the ROS node
-                $('#fcu-connected').text(data.FCU.Connected).css('color', data.FCU.Connected === 'connected' ? 'green' : 'red');
-                $('#fcu-heartbeat').text(data.FCU.Heartbeat).css('color', data.FCU.Heartbeat !== '0Hz' ? 'green' : 'red');
-                // Update System parameters
-                $('#system-3d-gyro').text(data.System["3D Gyro"]).css('color', data.System["3D Gyro"] === 'Pass' ? 'green' : 'red');
-                $('#system-3d-accelerometer').text(data.System["3D Accelerometer"]).css('color', data.System["3D Accelerometer"] === 'Pass' ? 'green' : 'red');
-                $('#system-3d-magnetometer').text(data.System["3D Magnetometer"]).css('color', data.System["3D Magnetometer"] === 'Pass' ? 'green' : 'red');
-                $('#system-gps-state').text(data.System["GPS State"]).css('color', data.System["GPS State"] === 'Pass' ? 'green' : 'red');
-                $('#system-gps-satellites').text(data.System["GPS Satellites"]).css('color', data.System["GPS Satellites"] !== '0' ? 'green' : 'red');
-                $('#system-rc-receiver').text(data.System["RC Receiver"]).css('color', data.System["RC Receiver"] === 'Pass' ? 'green' : 'red');
-                $('#system-ahrs').text(data.System["AHRS"]).css('color', data.System["AHRS"] === 'Pass' ? 'green' : 'red');
-                $('#system-battery-state').text(data.System["Battery State"]).css('color', data.System["Battery State"] === 'Pass' ? 'green' : 'red');
-                $('#system-battery-voltage').text(data.System["Battery Voltage"]).css('color', data.System["Battery Voltage"] !== '0V' ? 'green' : 'red');
-                $('#system-battery-current').text(data.System["Battery Current"]).css('color', data.System["Battery Current"] !== '0A' ? 'green' : 'red');
-                $('#system-pre-arm-check').text(data.System["Pre-Arm Check"]).css('color', data.System["Pre-Arm Check"] === 'Pass' ? 'green' : 'red');
-                $('#system-cpu-load').text(data.System["CPU Load"]).css('color', data.System["CPU Load"] !== '0%' ? 'green' : 'red');
-            };
-            eventSource.onerror = function() {
-                eventSource.close();
-            };
-        }
-
-        $(document).ready(function() {
-            $('#start-node-link').click(function(e) {
-                e.preventDefault();
-                startNode();
-            });
-        });
-    </script>
 {% endblock %}
