New layout, fast data acquisition (rosbridge), Terminal

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="text-center">
-        <!-- <img src="/static/logof4f.png" alt="Project Logo" class="logo"> -->
+        <p>Welcome to the Drone Dashboard. Here you can monitor the current status of the drone in real-time as well as configure it and ensure that you are all set for your first flight.</p>
         <img src="/static/x500.jpg" alt="New Picture" class="img-fluid mt-4" style="width: 70%; max-width: 10000px;">
     </div>
 {% endblock %}
