--- a/templates/base.html
+++ b/templates/base.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drone Dashboard</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/xterm.css') }}">
     <style>
         body {
             margin: 0; /* Remove default margin */
@@ -106,7 +106,8 @@
         <div class="row">
             <nav class="col-md-2 d-none d-md-block sidebar left-sidebar">
                 <div class="drone-info text-center mb-4">
-                    <img src="/static/camera-drone.png" alt="Drone Model" class="img-fluid">
+                    <img src="{{ url_for('static', filename='camera-drone.png') }}" alt="Drone Model" class="img-fluid">
+                    <p><strong>Model:</strong> <span id="drone-model">Loading...</span></p>
                     <p><strong>IP:</strong> <span id="drone-ip">192.168.1.1</span></p>
                 </div>
                 <ul class="nav flex-column">
@@ -150,35 +151,44 @@
                     <div class="status-card">
                         <h6>FCU Status</h6>
                         <div class="status-item">
-                            <img src="/static/icons/link.png" alt="Connected Icon">
+                            <img src="{{ url_for('static', filename='icons/link.png') }}" alt="Connected Icon">
                             <strong>Connected: </strong> <span id="fcu-connected">No</span>
                         </div>
                         <div class="status-item">
-                            <img src="/static/icons/pulse.png" alt="Heartbeat Icon">
+                            <img src="{{ url_for('static', filename='icons/pulse.png') }}" alt="Heartbeat Icon">
                             <strong>Heartbeat: </strong> <span id="fcu-heartbeat">0 Hz</span>
                         </div>
                     </div>
                     <div class="status-card">
                         <h6>Sensors Status</h6>
-                        <div class="status-item">
-                            <img src="/static/icons/map.png" alt="GPS Icon">
-                            <strong>GPS: </strong> <span id="gps-status">Unknown</span>
+                        <div id="sensor-items">
+                            <div class="status-item">
+                                <img src="{{ url_for('static', filename='icons/map.png') }}" alt="GPS Icon">
+                                <strong>GPS: </strong> <span id="gps-status">Unknown</span>
+                            </div>
+                            <div class="status-item">
+                                <img src="{{ url_for('static', filename='icons/satellite.png') }}" alt="Satellites Icon">
+                                <strong>Nbr of Satellites: </strong> <span id="gps-satellites">0</span>
+                            </div>
+                            <div class="status-item">
+                                <img src="{{ url_for('static', filename='icons/rc.png') }}" alt="RC Receiver Icon">
+                                <strong>RC Receiver: </strong> <span id="rc-receiver">Unknown</span>
+                            </div>
+                            <div class="status-item">
+                                <img src="{{ url_for('static', filename='icons/battery.png') }}" alt="Battery Icon">
+                                <strong>Battery: </strong> <span id="battery-status">Unknown</span>
+                            </div>
+                            <div class="status-item">
+                                <img src="{{ url_for('static', filename='icons/cpu.png') }}" alt="CPU Load Icon">
+                                <strong>CPU Load: </strong> <span id="cpu-load">0%</span>
+                            </div>
                         </div>
-                        <div class="status-item">
-                            <img src="/static/icons/satellite.png" alt="Satellites Icon">
-                            <strong>Nbr of Satellites: </strong> <span id="gps-satellites">0</span>
-                        </div>
-                        <div class="status-item">
-                            <img src="/static/icons/rc.png" alt="RC Receiver Icon">
-                            <strong>RC Receiver: </strong> <span id="rc-receiver">Unknown</span>
-                        </div>
-                        <div class="status-item">
-                            <img src="/static/icons/battery.png" alt="Battery Icon">
-                            <strong>Battery: </strong> <span id="battery-status">Unknown</span>
-                        </div>
-                        <div class="status-item">
-                            <img src="/static/icons/cpu.png" alt="CPU Load Icon">
-                            <strong>CPU Load: </strong> <span id="cpu-load">0%</span>
+                        <div class="form-group">
+                            <select class="form-control" id="sensor-dropdown">
+                                <option value="">Select Additional Sensor</option>
+                                <option value="3D Gyro">3D Gyro</option>
+                                <option value="3D Accelerometer">3D Accelerometer</option>
+                            </select>
                         </div>
                     </div>
                     <div class="status-card">
@@ -189,14 +199,20 @@
             </nav>
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
+    <script src="{{ url_for('static', filename='js/jquery-3.5.1.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/socket.io.js') }}"></script>
     <script src="{{ url_for('static', filename='js/roslib.min.js') }}"></script>
     <script>
         $(document).ready(function() {
+            // Fetch the current IP and model of the drone and update the elements
+            $.get('/drone_info', function(data) {
+                $('#drone-ip').text(data.ip);
+                $('#drone-model').text(data.model);
+            });
+
             // Connect to Rosbridge WebSocket server
             var ros = new ROSLIB.Ros({
-                url: 'ws://192.168.8.240:9090'  // Replace with the actual IP address of your drone
+                url: 'ws://localhost:9090'  // Connect to localhost since ROS and web server are on the same machine
             });
 
             ros.on('connection', function() {
@@ -221,6 +237,7 @@
             diagnosticsListener.subscribe(function(message) {
                 message.status.forEach(function(status) {
                     status.values.forEach(function(value) {
+                        console.log('Key:', value.key); // Debugging output
                         switch (value.key) {
                             case 'Autopilot type':
                                 $('#fcu-connected').text(value.value);
@@ -250,10 +267,32 @@
                                     $('#ready-to-fly-light').removeClass('light-green').addClass('light-red');
                                 }
                                 break;
+                            case '3D gyro':
+                                $('#3d-gyro').text(value.value);
+                                break;
+                            case '3D accelerometer':
+                                $('#3d-accelerometer').text(value.value);
+                                break;
                             // Add more cases as needed for other status keys
                         }
                     });
                 });
+            });
+
+            // Handle adding new sensors
+            $('#sensor-dropdown').change(function() {
+                var selectedSensor = $(this).val();
+                if (selectedSensor) {
+                    var sensorId = selectedSensor.toLowerCase().replace(/ /g, '-');
+                    var iconFile = sensorId + '.png'; // Generate icon filename
+                    $('#sensor-items').append(
+                        '<div class="status-item">' +
+                            '<img src="/static/icons/' + iconFile + '" alt="' + selectedSensor + ' Icon">' +
+                            '<strong>' + selectedSensor + ': </strong> <span id="' + sensorId + '">Unknown</span>' +
+                        '</div>'
+                    );
+                    $(this).val(''); // Reset dropdown
+                }
             });
         });
     </script>
