--- a/templates/terminal.html
+++ b/templates/terminal.html
@@ -1,18 +1,23 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div id="terminal" style="height: 400px; width: 200%;"></div>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xterm/css/xterm.css" />
-<script src="https://cdn.jsdelivr.net/npm/xterm/lib/xterm.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/xterm-addon-fit/lib/xterm-addon-fit.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/socket.io-client/dist/socket.io.js"></script>
+<div id="terminal" style="height: 600px; width: 100%;"></div>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/xterm.css') }}" />
+<script src="{{ url_for('static', filename='js/xterm.js') }}"></script>
+<script src="{{ url_for('static', filename='js/xterm-addon-fit.js') }}"></script>
+<script src="{{ url_for('static', filename='js/socket.io.js') }}"></script>
 <script>
     document.addEventListener("DOMContentLoaded", function() {
-        var term = new Terminal();
+        var term = new Terminal({
+            fontSize: 16  // Increase font size
+        });
         var fitAddon = new FitAddon.FitAddon();
         term.loadAddon(fitAddon);
         term.open(document.getElementById('terminal'));
         fitAddon.fit();
+
+        // Adjust terminal width dynamically based on container size
+        window.addEventListener('resize', () => fitAddon.fit());
 
         var socket = io();
 
@@ -24,8 +29,21 @@
             term.write(data);
         });
 
+        socket.on('disconnect', function() {
+            term.write('\r\nConnection closed.\r\n');
+        });
+
         // Initial message
         term.writeln('Welcome to the SSH terminal!');
+
+        // Error handling
+        term.on('error', function(err) {
+            console.error('Terminal error:', err);
+        });
+
+        term.parser.on('error', function(err) {
+            console.error('xterm.js parsing error:', err);
+        });
     });
 </script>
 {% endblock %}
