--- a/templates/configure_wifi.html
+++ b/templates/configure_wifi.html
@@ -73,6 +73,7 @@
         <p id="status-message"></p>
     </div>
 
+    <script src="{{ url_for('static', filename='js/jquery-3.5.1.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/popper.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
     <script>
